--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roaringroster",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A collaborative rostering app for self-organized teams",
   "productName": "RoaringRoster",
   "author": "Michael Kamphausen",
@@ -24,7 +24,11 @@
   },
   "dependencies": {
     "@automerge/automerge": "^2.0.3",
-    "@quasar/extras": "^1.16.7",
+    "@automerge/automerge-repo": "^1.1.0",
+    "@automerge/automerge-repo-network-websocket": "^1.1.0",
+    "@automerge/automerge-repo-storage-indexeddb": "^1.1.0",
+    "@quasar/extras": "^1.16.9",
+    "@yeger/vue-masonry-wall": "^5.0.2",
     "argon2-browser": "^1.18.0",
     "core-js": "^3.6.5",
     "dexie": "^3.2.4",
@@ -34,7 +38,7 @@
     "keytar": "^7.9.0",
     "luxon": "^3.4.2",
     "pinia": "^2.0.11",
-    "quasar": "^2.13.0",
+    "quasar": "^2.14.3",
     "vue": "^3.3.7",
     "vue-facing-decorator": "^3.0.3",
     "vue-i18n": "^9.6.1",
@@ -42,14 +46,15 @@
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
-    "@quasar/app-webpack": "3.9.4",
+    "@quasar/app-webpack": "^3.12.3",
+    "@quasar/quasar-app-extension-qcalendar": "^4.0.0-beta.15",
     "@quasar/quasar-app-extension-qmarkdown": "^2.0.0-beta.10",
     "@types/argon2-browser": "^1.18.1",
     "@types/luxon": "^3.3.2",
     "@types/node": "^20.5.7",
     "@types/uuid": "^9.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "apk-update": "^1.0.3",
     "base64-loader": "^1.0.0",
     "dotenv": "^16.3.1",
