--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": ".",
     "experimentalDecorators": true,
     "lib": [
-      "es2020",
+      "ES2020",
+      "ES2021.Intl",
       "dom"
     ],
     "types": [
