--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "keytar": "^7.9.0",
     "luxon": "^3.4.2",
     "pinia": "^2.0.11",
-    "quasar": "^2.14.3",
-    "sqlite3": "^5.1.6",
+    "quasar": "^2.14.5",
+    "sqlite3": "5.1.6",
     "vue": "^3.3.7",
     "vue-facing-decorator": "^3.0.3",
     "vue-i18n": "^9.6.1",
