--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -18,16 +18,16 @@
     "cordova-ios": "^7.0.0",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-apkupdater": "^4.0.3",
+    "cordova-plugin-apkupdater": "^5.0.0",
     "cordova-plugin-device": "^2.1.0",
-    "cordova-plugin-file": "^8.0.0",
-    "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-file": "^8.0.1",
+    "cordova-plugin-inappbrowser": "^6.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-localization-strings": "^5.0.5",
     "cordova-plugin-printer": "^0.8.0",
     "cordova-plugin-secure-key-store": "github:michaelkamphausen/cordova-plugin-secure-key-store",
     "cordova-plugin-splashscreen": "^6.0.2",
-    "cordova-plugin-statusbar": "^3.0.0",
+    "cordova-plugin-statusbar": "^4.0.0",
     "cordova-sqlite-storage": "^6.1.0",
     "es6-promise-plugin": "^4.2.2"
   },
@@ -38,10 +38,7 @@
         "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
       },
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-apkupdater": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-file": {},
-      "cordova-plugin-inappbrowser": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-clipboard": {},
       "cordova-plugin-localization-strings": {
@@ -51,9 +48,14 @@
         "ANDROID_SUPPORT_V4_VERSION": "28.+"
       },
       "cordova-plugin-secure-key-store": {},
-      "cordova-plugin-statusbar": {},
       "cordova-sqlite-storage": {},
-      "es6-promise-plugin": {}
+      "es6-promise-plugin": {},
+      "cordova-plugin-apkupdater": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-file": {
+        "ANDROIDX_WEBKIT_VERSION": "1.4.0"
+      }
     },
     "platforms": [
       "ios",
