added local-first auth provider for automerge repo (WIP)

--- a/package.json
+++ b/package.json
@@ -27,19 +27,21 @@
     "@automerge/automerge-repo": "^1.1.0",
     "@automerge/automerge-repo-network-websocket": "^1.1.0",
     "@automerge/automerge-repo-storage-indexeddb": "^1.1.0",
+    "@localfirst/auth-provider-automerge-repo": "^5.4.1",
     "@quasar/extras": "^1.16.9",
     "@yeger/vue-masonry-wall": "^5.0.2",
     "argon2-browser": "^1.18.0",
     "core-js": "^3.6.5",
-    "dexie": "^3.2.4",
+    "dexie": "^4.0.1",
     "dexie-encrypted": "^2.0.0",
     "fs-extra": "^11.1.1",
     "indexeddbshim": "^10.1.0",
     "keytar": "^7.9.0",
     "luxon": "^3.4.2",
     "pinia": "^2.0.11",
-    "quasar": "^2.14.5",
+    "quasar": "^2.15.1",
     "sqlite3": "5.1.6",
+    "ua-parser-js": "^1.0.37",
     "vue": "^3.3.7",
     "vue-facing-decorator": "^3.0.3",
     "vue-i18n": "^9.6.1",
@@ -47,12 +49,13 @@
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
-    "@quasar/app-webpack": "^3.12.3",
+    "@quasar/app-webpack": "^3.12.4",
     "@quasar/quasar-app-extension-qcalendar": "^4.0.0-beta.15",
     "@quasar/quasar-app-extension-qmarkdown": "^2.0.0-beta.10",
     "@types/argon2-browser": "^1.18.1",
     "@types/luxon": "^3.3.2",
     "@types/node": "^20.5.7",
+    "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
