--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@automerge/automerge-repo-network-websocket": "^1.1.0",
     "@automerge/automerge-repo-storage-indexeddb": "^1.1.0",
     "@localfirst/auth-provider-automerge-repo": "^5.4.1",
-    "@quasar/extras": "^1.16.9",
+    "@quasar/extras": "^1.16.11",
     "@yeger/vue-masonry-wall": "^5.0.2",
     "argon2-browser": "^1.18.0",
     "core-js": "^3.6.5",
@@ -39,7 +39,7 @@
     "keytar": "^7.9.0",
     "luxon": "^3.4.2",
     "pinia": "^2.0.11",
-    "quasar": "^2.15.1",
+    "quasar": "^2.15.2",
     "sqlite3": "5.1.6",
     "ua-parser-js": "^1.0.37",
     "vue": "^3.3.7",
@@ -65,11 +65,14 @@
     "electron": "^26.4.2",
     "electron-builder": "^24.6.4",
     "electron-updater": "^6.1.4",
-    "eslint": "^8.10.0",
+    "eslint": "8.57",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.0.0",
     "license-webpack-plugin": "^4.0.2",
     "prettier": "^3.0.3"
+  },
+  "overrides": {
+    "dexie": "^4.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
