--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^3.6.5",
     "dexie": "^4.0.1",
     "dexie-encrypted": "^2.0.0",
+    "dompurify": "^3.2.4",
     "fs-extra": "^11.1.1",
     "indexeddbshim": "^10.1.0",
     "luxon": "^3.4.2",
