updated dependencies, including big @quasar/app-webpack@4 migration, also including pinia@3, vue-i18n@11, electron@35 (dropping support for macOS 10.13, 10.14 and 10.15)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,6 @@
 {
-  "extends": "@quasar/app-webpack/tsconfig-preset",
+  "extends": "./.quasar/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "experimentalDecorators": true,
-    "lib": [
-      "ES2020",
-      "ES2021.Intl",
-      "dom"
-    ],
-    "types": [
-      "quasar",
-      "node",
-      "filesystem"
-    ]
-  },
-  "include": [
-    "src",
-    "src-electron"
-  ]
+    "experimentalDecorators": true
+  }
 }
