--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "git://github.com/roaringroster/webapp.git"
   },
+  "type": "module",
   "scripts": {
     "install": "curl \"https://raw.githubusercontent.com/spdx/license-list-data/master/text/{MIT,Apache-2.0,ISC,Unlicense}.txt\" --output \"license-templates/#1.txt\" --create-dirs --silent",
     "dev": "./bin/quasar.js",
@@ -18,7 +19,7 @@
     "set:version": "npm --no-git-tag-version version ${VERSION:-patch}",
     "version": "bin/version.js",
     "icons": "bin/icons.js",
-    "lint": "eslint --ext .js,.ts,.vue ./",
+    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
     "format": "prettier --write \"**/*.{js,ts,vue,,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -28,7 +29,7 @@
     "@automerge/automerge-repo-network-websocket": "^1.2.1",
     "@automerge/automerge-repo-storage-indexeddb": "^1.2.1",
     "@localfirst/auth-provider-automerge-repo": "^6.0.0",
-    "@quasar/extras": "^1.16.15",
+    "@quasar/extras": "^1.16.17",
     "@yeger/vue-masonry-wall": "^5.0.2",
     "argon2-browser": "^1.18.0",
     "chart.js": "^4.4.6",
@@ -39,41 +40,47 @@
     "fs-extra": "^11.1.1",
     "indexeddbshim": "^10.1.0",
     "luxon": "^3.4.2",
-    "pinia": "^2.0.11",
+    "pinia": "^3.0.1",
     "qrcode": "^1.5.3",
-    "quasar": "^2.17.4",
+    "quasar": "^2.18.1",
     "sqlite3": "5.1.6",
     "ua-parser-js": "^1.0.39",
     "vue": "^3.5.6",
     "vue-chartjs": "^5.3.2",
     "vue-facing-decorator": "^3.0.3",
-    "vue-i18n": "^10.0.4",
+    "vue-i18n": "^11.1.2",
     "vue-qrcode-reader": "^5.5.7",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
-    "@quasar/app-webpack": "^3.15.1",
-    "@quasar/quasar-app-extension-qcalendar": "^4.0.0-beta.15",
-    "@quasar/quasar-app-extension-qmarkdown": "^2.0.0-beta.10",
+    "@eslint/js": "^9.22.0",
+    "@quasar/app-webpack": "^4.1.2",
+    "@quasar/quasar-app-extension-qcalendar": "^4.1.2",
+    "@quasar/quasar-app-extension-qmarkdown": "^2.0.5",
     "@types/argon2-browser": "^1.18.1",
     "@types/luxon": "^3.3.2",
     "@types/node": "^22.4.0",
     "@types/qrcode": "^1.5.5",
     "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
     "apk-update": "^1.0.3",
+    "autoprefixer": "^10.4.21",
     "base64-loader": "^1.0.0",
-    "dotenv": "^16.3.1",
-    "electron": "^26.4.2",
-    "electron-builder": "^25.0.5",
-    "electron-updater": "^6.1.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "dotenv": "^16.4.7",
+    "electron": "^35.0.2",
+    "electron-builder": "^25.1.8",
+    "electron-updater": "^6.3.9",
+    "eslint": "^9.22.0",
+    "eslint-plugin-vue": "^10.0.0",
+    "eslint-webpack-plugin": "^5.0.0",
+    "globals": "^16.0.0",
     "license-webpack-plugin": "^4.0.2",
-    "prettier": "^3.0.3"
+    "prettier": "^3.5.3",
+    "ts-loader": "^9.5.2",
+    "vue-tsc": "^2.2.8"
   },
   "overrides": {
     "dexie": "$dexie",
