--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "dexie": "^4.0.1",
     "dexie-encrypted": "^2.0.0",
     "dompurify": "^3.2.4",
+    "electron-window-state": "^5.0.3",
     "fs-extra": "^11.1.1",
     "indexeddbshim": "^10.1.0",
     "luxon": "^3.4.2",
     "pinia": "^3.0.1",
     "qrcode": "^1.5.3",
-    "quasar": "^2.18.1",
+    "quasar": "^2.18.2",
     "sqlite3": "5.1.6",
     "ua-parser-js": "^1.0.39",
     "vue": "^3.5.6",
@@ -55,7 +56,7 @@
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
     "@eslint/js": "^9.22.0",
-    "@quasar/app-webpack": "^4.2.1",
+    "@quasar/app-webpack": "^4.3.0",
     "@quasar/quasar-app-extension-qcalendar": "^4.1.2",
     "@quasar/quasar-app-extension-qmarkdown": "^2.0.5",
     "@types/argon2-browser": "^1.18.1",
