--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -13,7 +13,7 @@
   "author": "Michael Kamphausen",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "cordova-android": "^13.0.0",
+    "cordova-android": "^14.0.1",
     "cordova-clipboard": "^1.3.0",
     "cordova-ios": "github:michaelkamphausen/cordova-ios#feature/mediacapture-permission",
     "cordova-plugin-advanced-http": "^3.3.1",
@@ -72,8 +72,8 @@
       }
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
