--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -17,6 +17,7 @@
     "cordova-clipboard": "^1.3.0",
     "cordova-ios": "github:michaelkamphausen/cordova-ios#feature/mediacapture-permission",
     "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-apkupdater": "^5.0.1",
     "cordova-plugin-customurlscheme": "^5.0.2",
@@ -26,6 +27,7 @@
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-localization-strings": "^5.0.6",
     "cordova-plugin-printer": "^0.8.0",
+    "cordova-plugin-save-dialog": "^2.0.1",
     "cordova-plugin-secure-key-store": "github:michaelkamphausen/cordova-plugin-secure-key-store",
     "cordova-plugin-splashscreen": "^6.0.2",
     "cordova-plugin-statusbar": "^4.0.0",
@@ -69,7 +71,9 @@
       },
       "cordova-plugin-file": {
         "ANDROIDX_WEBKIT_VERSION": "1.4.0"
-      }
+      },
+      "cordova-plugin-save-dialog": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "ios",
